# practical-nlp-code

./: .gitignore  pyproject.toml
Ch3/: 01_OneHotEncoding.ipynb  02_Bag_of_Words.ipynb  03_Bag_of_N_Grams.ipynb  04_TF_IDF.ipynb  05_Pre_Trained_Word_Embeddings.ipynb
