[tool.poetry]
name = "practical-nlp-code"
version = "0.1.0"
description = ""
authors = ["leroykim <leroy.kim@umbc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"
notebook = "^7.0.6"
wget = "^3.2"
gensim = "^4.3.2"
psutil = "^5.9.6"
spacy = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
